--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "devStart": "nodemon server.js"
   },
@@ -10,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.4",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.22"
   }
