--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "devStart": "nodemon server.js"
   },
@@ -11,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose-sequence": "^3.0.7",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
+    "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
