--- a/api/package.json
+++ b/api/package.json
@@ -14,10 +14,12 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "mongoose-sequence": "^5.3.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "colors": "^1.4.0",
