--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^7.0.4",
     "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "colors": "^1.4.0",
