--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
     "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
